Fix licenças css spacings

--- a/app/assets/styles/amt/_section.scss
+++ b/app/assets/styles/amt/_section.scss
@@ -14,6 +14,14 @@
   margin: 0 0 40px 0;
   overflow: hidden;
   padding: 0;
+
+  li {
+  	margin-bottom: 20px;
+  	span{
+  		max-width: 220px;
+  		display: block;
+  	}
+  }
 }
 
 .section-content {
